# duna-orders

./: .env.example  .gitignore  ARCHITECTURE-M8.md  ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  DEMO_DATA.md  MIGRATIONS.md  README.md  ROADMAP.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
alembic/: env.py
data/: demo_messages.json  demo_restaurant_catalog.json
docs/: M10_STATEFUL_PARSER_DESIGN.md  M8_2_OPERATOR_REVIEW_DESIGN.md  M8_3_OPERATOR_CONFIRMATION_DESIGN.md  M8_5B_TENANT_SCOPED_READS_DESIGN.md  M8_6_3A_RETRY_UI_SAFETY_DESIGN.md  M8_6_3D_RETRY_LIMIT_POLICY.md  M8_6_OUTBOUND_ACKNOWLEDGEMENT_DESIGN.md  M9_2A_CONVERSATION_ADVANCEMENT_SERVICE_DESIGN.md  M9_4B_CONVERSATION_OBSERVABILITY_READ_MODEL_DESIGN.md  M9_4E_IDLE_BOUNDARY_DESIGN.md  M9_6D_ACCEPT_AND_DEFER_CLAIM_BUSY_DESIGN.md  M9_6_CONVERSATION_UOW_DESIGN.md  M9_CONVERSATION_STATE_ARCHITECTURE.md  SMOKE.md  SMOKE_CHECKLIST.md  SMOKE_CLAIM_BUSY_ACCEPT_AND_DEFER.md  SMOKE_OUTBOUND.md
pages/: 1_New_Order.py  2_Orders_Today.py  3_Dashboard.py  5_Inbound_Review.py  6_Conversations.py
scripts/: measure_sheets_reads.py  parser_smoke_test.py  preview_demo_orders.py  reseed_postgres.py  seed_demo_catalog.py  seed_demo_data.py  seed_demo_orders.py  send_outbound_ack_smoke.py  smoke_google_sheets.py  smoke_preflight.py
tests/: _fakes.py  conftest.py  test_accumulated_draft_merge.py  test_acknowledgement_template.py  test_alembic_scaffold.py  test_anthropic_parser.py  test_architecture_boundaries.py  test_confirmation_message.py  test_conversation_advancement.py  test_conversation_customer_claim_spike.py  test_conversation_customer_claim_store.py  test_conversation_draft_link.py  test_conversation_observation.py  test_conversation_state_store.py  test_conversations_page.py  test_customer_context.py  test_dashboard_page.py  test_dashboard_widgets.py  test_deferred_inbound.py  test_demo_catalog.py  test_demo_dataset.py  test_demo_messages.py  test_demo_orders.py  (+40 more)
(+78 files in other folders)
