[project]
name = "duna-orders"
version = "0.1.0"
description = "WhatsApp-native order control system for small businesses (pilot MVP)"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]