[project]
name = "duna-orders"
version = "0.1.0"
description = "WhatsApp-native order control system for small businesses (pilot MVP)"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "gspread",
    "google-auth",
    "pydantic",
    "pydantic-settings",
    "streamlit",
    "tenacity",
    "sqlalchemy>=2.0",
    "alembic",
    "psycopg[binary]",
    "fastapi==0.136.3",
    "uvicorn==0.48.0",
    "twilio==9.10.9",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "live_api: requires ANTHROPIC_API_KEY env var; not run by default",
    "live_sheets: requires GOOGLE_SHEETS_TEST_SPREADSHEET_ID and service account credentials; not run by default",
    "live_postgres: requires DATABASE_URL env var; not run by default",
]
addopts = "-m 'not live_api and not live_sheets and not live_postgres'"
